--- a/UE/S1/CESIM/rapport/rapport.tex
+++ b/UE/S1/CESIM/rapport/rapport.tex
@@ -32,7 +32,6 @@
 \begin{document}
 \maketitle
 \tableofcontents
-
   \section{Préambule}
     Autrefois dis 'le Bien-heureux', notre équipe a repris en main la gestion du nouvel hotel 'Ocre'. La précèdente équipe l'a laissé dans un état négligé.
     Notre objectif est de gérer l'hôtel de manière économiquement viable pendant ces 4 prochaines années, partagées en semestres de hautes et basses saisons.
@@ -101,35 +100,35 @@
     Ces quelques graphiques illustrent nos propos. Nous comparons ici nos données avec nos 2 principaux concurrents.
     \newline
         
-    \begin{figure}[!h]
+    \begin{figure}[!ht]
       \begin{center}
 	\includegraphics[height=7cm,keepaspectratio]{./images/remplissage_hotel.png}
       \end{center}
       \caption{\textit{Remplissage de l'hotel (domestique)}}
     \end{figure}
     
-    \begin{figure}[!h]
+    \begin{figure}[!ht]
       \begin{center}
 	\includegraphics[height=7cm,keepaspectratio]{./images/frais_marketting.png}
       \end{center}
       \caption{\textit{Frais marketting}}
     \end{figure}
     
-    \begin{figure}[!h]
+    \begin{figure}[!ht]
       \begin{center}
 	\includegraphics[height=7cm,keepaspectratio]{./images/marketting_part_marche.png}
       \end{center}
       \caption{\textit{Remplissage de l'hotel en fonction des frais de marketting (domestique)}}
     \end{figure}
     
-    \begin{figure}[!h]
+    \begin{figure}[!ht]
       \begin{center}
 	\includegraphics[height=7cm,keepaspectratio]{./images/rapport_qualite_prix.png}
       \end{center}
       \caption{\textit{Rapport qualité/prix (domestique)}}
     \end{figure}
 
-    \begin{figure}[!h]
+    \begin{figure}[!ht]
       \begin{center}
 	\includegraphics[height=7cm,keepaspectratio]{./images/cout_administration_et_maintenance.png}
       \end{center}
@@ -137,11 +136,32 @@
     \end{figure}
 
     
-    \begin{figure}[!h]
+    \begin{figure}[!ht]
       \begin{center}
 	\includegraphics[height=7cm,keepaspectratio]{./images/effort_reduction_couts.png}
       \end{center}
       \caption{\textit{Effort reductions des coûts (domestique)}}
+    \end{figure}
+    
+    \begin{figure}[!ht]
+      \begin{center}
+	\includegraphics[height=7cm,keepaspectratio]{./images/action.png}
+      \end{center}
+      \caption{\textit{Prix de l'action}}
+    \end{figure}
+        
+    \begin{figure}[!ht]
+      \begin{center}
+	\includegraphics[height=7.0cm,keepaspectratio]{./images/dettes_capitaux.png}
+      \end{center}
+      \caption{\textit{Dettes sur capitaux propres (en \%)}}
+    \end{figure}
+    
+    \begin{figure}[!ht]
+      \begin{center}
+	\includegraphics[height=14cm,keepaspectratio]{./images/bilan_t8.png}
+      \end{center}
+      \caption{\textit{Bilan capitaux au dernier tour}}
     \end{figure}
     
 \end{document}          
