figure ventes_internationales + début tour 1-8 domestiques

--- a/UE/S1/CESIM/rapport/rapport.tex
+++ b/UE/S1/CESIM/rapport/rapport.tex
@@ -39,12 +39,35 @@
     \newline
     L’hôtel Ocre s’établit dans un contexte de concurrence avec 6 autres établissements qui partent d’une situation économique similaire.
     L’hôtel a initialement une capacité d’accueil de 50 chambres qui ont été gérées par 4 employés permanents et 2 employés temporaires.
+    Nous avons recuperé l'hotel en basse saison
     \newline
+    \newline
+    De manière global, nous avons accordé une grande attention aux conditions de marchés, et à l'étude de nos résultats.
+    La prise en compte des variations de la demande en fonction de la saison
+    (été -haute saison, hiver - basse saison) et des acteurs extérieurs nous ont permis d’évaluer
+    au mieux les besoins des clients, et de pouvoir ciblés les marchés. (nos estimations se sont souvent avérés très précises)
   \newpage
   \section{Stratégie de developpement : domestique}
-    \subsection{Tour 1 : 1er hiver}
-      Nous avons recuperé l'hotel en basse saison.
+    \subsection{Tour 1 : 1er hiver}      
+      Dans un premier temps, la stratégie développée a été de faire de l’hotel Ocre un hotêl suffisamment low cost,
+      des prix attrayants, avec une rénovation à 87\%, pour s’accaparer une très grande part de marché.
+
     \subsection{Tour 2 - Tour 3}
+    
+      Mais ensuite nous avons décidé petit à petit de nous diriger vers le luxe,
+      que ce soit au niveau de la qualité de la prestation ou du prix de la nuité,
+      étant donné que nos concurrents ont baissé leurs prix de manière drastique.
+      \newline
+      \newline
+      Ainsi nous nous dirigeons vers un autre type de marché et un autre type de clientèle.
+      L’hôtel est rénové à plus de 95\% et l'inverstissement en formation des employés est augmenté, pour une meilleure qualité de service.
+      \newline
+      \newline
+      Aussi,  l’investissement est nécessaire pour garder une dynamique de développement de l’hôtel.
+      C’est la raison pour laquelle nous avons décidé d’augmenter la dette de 8-9\%
+      soit 500 000 € pour la construction de nouvelles chambres pour le marché domestique.
+      
+      
       • 2 permanents à l'international (2400 chambres possibles sur les 3600 théoriques... economie là dessus ou un 3eme temporaire?)
       • reduction prix domestique pour ecraser concurrence
       • recrutement 1 permanent et de 2 temporaires pour l'été
@@ -55,7 +78,12 @@
 
 
     \subsection{Tour 5 - Tour 8}
-     
+      Néanmoins, certains de nos concurrents ont décidé de s’aligner sur notre modèle.
+      Ils ont augmenter la qualité des prestations de leur hôtel.
+      C’est pourquoi notre stratégie s’est orienté des prestations de qualités, à prix bon marché.
+      On assure une bonne rentabilité de notre établissement avec des marges plus faible, et augmentons notre part de marché.
+
+      
    \newpage
    \section{Stratégie de developpement : international}
     
@@ -83,13 +111,14 @@
       Les faibles résultats de cette saison hivernale s'explique par cette investissement.
     \subsection{Tour 3 - Tour 8}
       Le marché international ne connait finalement pas l'essor attendu. L'épisode de grippe aviaire au 2ème été a détruit le marché.
-      Nous ne prenons donc pas de chambres supplémentaires, et rentabilisons au mieux nos chambres. (peu de renovations, optimisations des charges du personnels).
+      (voir Figure \ref{ventes_internationales})
+      Nous ne prenons donc pas de chambres supplémentaires, et rentabilisons au mieux nos chambres. (peu de renovations, optimisations des charges du personnels, maximum de préventes en agence).
       \newline
       En limitant ainsi les risques à l'international, nous concentrons nos investissements sur le marché domestique.
       \newline
       \newline
       Le marché reprends de la dynamique au dernier été. Grâce à notre politique de prix bas, nous obtenons la plus grosse part du marché, en se plaçant nettement devant
-      'La Rose' 'Hotel Aviv', qui sont nos concurrents directes. Nous esperons ainsi les essoufler et croître plus vite qu'eux.
+      'La Rose' 'Hotel Aviv', qui sont nos concurrents directes. Nous esperons ainsi les essoufler et croître plus vite qu'eux sur le long terme.
 
   \newpage
   \section{Perspectives futures et conclusion}
@@ -155,6 +184,14 @@
 	\includegraphics[height=7.0cm,keepaspectratio]{./images/dettes_capitaux.png}
       \end{center}
       \caption{\textit{Dettes sur capitaux propres (en \%)}}
+    \end{figure}
+    
+    \begin{figure}[!ht]
+      \begin{center}
+	\includegraphics[height=7.0cm,keepaspectratio]{./images/ventes_internationales.png}
+      \end{center}
+      \caption{\textit{Nombre de nuits vendu au guichet par saison (international)}}
+      \label{ventes_internationales}
     \end{figure}
     
     \begin{figure}[!ht]
