--- a/UE/S1/CESIM/rapport/rapport.tex
+++ b/UE/S1/CESIM/rapport/rapport.tex
@@ -35,8 +35,8 @@
 \maketitle
 \tableofcontents
   \section{Préambule}
-    Autrefois dis 'le Bien-heureux', notre équipe a repris en main la gestion du nouvel hotel 'Ocre'. La précèdente équipe l'a laissé dans un état négligé.
-    Nous avons geré l'hotel pendant ces 4 dernières années, et avons construit un modèle économiquement viable.
+    Autrefois dis 'le Bien-heureux', notre équipe a repris en main la gestion du nouvel hôtel 'Ocre'. La précèdente équipe l'a laissé dans un état négligé.
+    Nous avons géré l'hôtel pendant ces 4 dernières années, et avons construit un modèle économiquement viable.
     \newline
     \newline
     L’hôtel Ocre s’établit dans un contexte de concurrence avec 6 autres établissements qui partent d’une situation économique similaire.
@@ -68,10 +68,10 @@
       \newline
       \newline
       Nous decidons également d'investir (+ 50 000 \euro{} Figure \ref{effort_reduction_couts}) dans la reduction des coûts de maintenance et d'administration,
-      car un hotel de meilleur qualité implique de plus important frais de gestion, et nous comptons retombez sur cette investissement.
+      car un hôtel de meilleur qualité implique de plus important frais de gestion, et nous comptons retombez sur cette investissement.
       \newline
       \newline
-      Ce remaniement de l'hotel nous a donc donné un 2ème hiver difficile, avec le plus mauvais chiffre d'affaire du secteur,
+      Ce remaniement de l'hôtel nous a donc donné un 2ème hiver difficile, avec le plus mauvais chiffre d'affaire du secteur,
       mais nous savions que ce risque allait s'avérer rentable par la suite.
 
     \subsection{Tour 4 - Tour 8}
@@ -79,11 +79,14 @@
       nous decidons de l'augmenter à 80\% (soit 500 000 \euro{} d'emprunt) afin de construire 5 nouvelles chambres.
       \newline
       \newline
-      Néanmoins, certains de nos concurrents ont décidé de nous concurrencer sur le luxe.
+      Néanmoins, certains de nos concurrents (O'Tel et No Name) ont décidé de nous concurrencer sur le luxe.
       Ils ont augmenter la qualité des prestations de leur hôtel.
       C’est pourquoi notre stratégie s’est orienté des prestations de qualités, à prix bon marché.
       Avec des marges plus faible, on assure tout même une bonne rentabilité de notre établissement,
       augmentons notre part de marché, et diminuons celle de nos concurrents. (voir Tour 4 Figure \ref{remplissage_hotel})
+      \newline
+      \newline
+      Ayant 1 année d'avance, nous essayons de rester les plus compétitifs pour les prochains tours, en étudiant les choix de nos concurrents.
 
       
    \newpage
@@ -135,7 +138,6 @@
   va permettre d’accueillir plus de clients et de prendre l’avantage sur nos concurrents.
   \newline
   \newline
-  
   Notre hôtel a gagné en qualité, grâce à la rénovation à 100\%
   que nous avons effectuée et maintenue, mais aussi grâce au personnel
   très bien formé. Cela a permis au rapport qualité-prix de bien augmenter
@@ -143,13 +145,18 @@
   de 80,9\%, pour un résultat net par chambre de 3 031,57\euro{}.
   \newline
   \newline
-  
   Nous avons progressé à l’international où nous n’étions pas présents.
-  Notre taux d’occupation est actuellement de 92,1\% La stratégie d’avoir le meilleur rapport qualité-prix
-  a été très efficace. Cependant nos concurrents s’adaptent vite et commencent à nous rattrapper.
-  Notamment O’Tel qui nous rattrappe actuellement et nous dépasse même sur le dernier été. Pour les saisons
-  à venir, il sera donc important de s’adapter et de profiter de l’avantage que nous offre les dix chambres supplémentaires.
-  Il sera important de faire plus de marketing pour attirer de nouveaux clients et d’augmenter la qualité de notre hôtel.
+  Notre taux d’occupation est actuellement de 92,1\%.
+  Pour les saisons à venir, une rénovation complète de l’hôtel et une meilleure formation du personnel,
+  pourrait permettre d’atteindre les 100\% de taux d’occupation de nos concurrents Sunrise et No Name. 
+  \newline
+  \newline
+  La stratégie d’avoir le meilleur rapport qualité-prix a été très efficace.
+  Cependant nos concurrents s’adaptent vite et commencent à nous imiter.
+  Notamment O’Tel qui nous rattrappe actuellement et nous dépasse même
+  sur le dernier été. Pour les saisons à venir, il sera donc important de s’adapter et de profiter
+  de l’avantage que nous offre les dix chambres supplémentaires. Il sera important de faire plus de
+  marketing pour attirer de nouveaux clients et d’augmenter la qualité de notre hôtel.
 
 
   \newpage
@@ -161,7 +168,7 @@
       \begin{center}
 	\includegraphics[height=7cm,keepaspectratio]{./images/remplissage_hotel.png}
       \end{center}
-      \caption{\textit{Remplissage de l'hotel (domestique)}}
+      \caption{\textit{Remplissage de l'hôtel (domestique)}}
       \label{remplissage_hotel}
     \end{figure}
     
@@ -176,7 +183,7 @@
       \begin{center}
 	\includegraphics[height=7cm,keepaspectratio]{./images/marketting_part_marche.png}
       \end{center}
-      \caption{\textit{Remplissage de l'hotel en fonction des frais de marketting (domestique)}}
+      \caption{\textit{Remplissage de l'hôtel en fonction des frais de marketting (domestique)}}
       \label{marketting_part_marche}
     \end{figure}
     
