ourimi + removed last figure

--- a/UE/S1/CESIM/rapport/rapport.tex
+++ b/UE/S1/CESIM/rapport/rapport.tex
@@ -13,7 +13,7 @@
 \author{
   Romain PEREIRA\\
   \newline
-  Douha ORHIMI\\
+  Douha OURIMI\\
   \and
   Laurie PANDRAUD\\
   \newline
@@ -231,12 +231,5 @@
       \caption{\textit{Nombre de nuits vendu au guichet par saison (international)}}
       \label{ventes_internationales}
     \end{figure}
-    
-    \begin{figure}[!ht]
-      \begin{center}
-	\includegraphics[height=14cm,keepaspectratio]{./images/bilan_t8.png}
-      \end{center}
-      \caption{\textit{Bilan capitaux au dernier tour}}
-    \end{figure}
-    
+
 \end{document}          
