--- a/UE/S1/IPI/projet/rapport/rapport.tex
+++ b/UE/S1/IPI/projet/rapport/rapport.tex
@@ -65,6 +65,10 @@
     \begin{itemize}[label=-]
       \item b = 8 $\textrm{b}_\textrm{o}$ + $\textrm{b}_\textrm{b}$
     \end{itemize}
+    
+    (SCHEMA)\newline\newline
+    
+    
     De plus, on peut également faire une transformation entre 2 coordonnées ('u', 'v') et le bit 'b'.
     On souhaite que le bit 'b' soit à 1 s'il y a un arc entre 'u' et 'v', sur 0 sinon.
     Pour cela, j'utilise la bijection:
@@ -79,16 +83,25 @@
     De plus, en réduisant la mémoire utilisé, je rends mon programme plus `cache-friendly`, le rendant plus rapide.
     Le processeur écrit des blocs mémoire du programme dans sa mémoire cache: plus les données sont compactes,
     moins il aura à faire des allés/retours entre la mémoire du programme et sa mémoire cache.\newline\newline
-    Le reste de l'implémentation du parcours en largeur suit l'algorithme traditionelle.
-    J'utilise une file FIFO (1er entré, 1er sorti), afin d'enregistrer les sommets à visiter en fonction de leur profondeur dans le graphe.\newline
-    (VOIR STRUCTURE DE DONNEES 'list') 
+    POur enregistrer les sommets en fonction de leur profondeur dans le graphe, et ainsi les visiter dans l'ordre de leur profondeur,
+    j'utilise une file FIFO (1er entré, 1er sorti).\newline
+    (VOIR STRUCTURE DE DONNEES 'list')\newline\newline
+    Chaque sommet 'u' de mon graphe possède un attribut pointant vers un autre sommet du graphe.
+    Une fois l'algorithme de parcours terminé, cet attribut pointe vers le prédécesseur de 'u',
+    dans le chemin le plus court allant de 's' à 't', et passant par 'u'.
+    Pour reconstruire le chemin, il suffit de regarder recursivement les prédécesseurs, en partant du sommet 't' jusqu'à ce que l'on ait atteint 's'.
+    La complexité de la reconstruction est en O(m), où 'm' est la longueur du chemin. Cette modélisation permet d'optimiser les coûts de stockage,
+    et est négligeable devant le temps d'execution de l'algorithme.
+    (SCHEMA DE LA REMONTE)\newline\newline
     
-  \newpage
+    Cette modélisation permet d'optimiser les coûts de stockage, et est négligeable devant le temps
+    d'execution de l'algorithme. Elle sera réutiliser dans Dijkstra et A*.
+    
   \subsection{Algorithme de Dijkstra (graphes pondérés positivement)}
     On considère ici un graphe où les arcs sont pondérés avec des poids positifs.\newline
     'Le chemin le plus court' entre 2 sommets corresponds au chemin avec la somme des poids de ses arcs minimum.\newline
      L'algorithme de Dijkstra nous est fourni dans le sujet. Remarquons que si le poids de tous les arcs sont identiques,
-     on retrouve l'algorithme de parcours en largeur.\newline
+     on retrouve l'algorithme de parcours en largeur.
     \subsubsection{1ère approche}
       Ma 1ère implementation (voir 'dijkstra.c.bkp') reprends le squelette du parcours en largeur.
       La seule différence réside dans le choix du prochain sommet à visiter.\newline
@@ -96,13 +109,14 @@
       Trouver le prochain sommet à visiter est d'une complexité \textbf{O(1)}.\newline\newline
       Dans l'algorithme de Dijkstra, les sommets sont visités par ordre du poids de leur chemin à 's'.
       Ainsi, si la file de visite contient 'm' sommets, trouver le prochain sommet à visiter devient en complexité \textbf{O(m)}
-    \subsubsection{File de priorité ('Pairing Priority Queue')}
+    \subsubsection{File de priorité ('Priority Queue')}
       Je me rends compte que l'operation 'trouvé sommet 'u' suivant minimisant 'd(u)' est pré-dominante dans le temps d'execution => j'optimiser
-  \newpage
+      'Binary heap'
+
   \subsection{Algorithme A* (graphes pondérés et fonctions heuristiques)}
     L'algorithme A* est une extension de l'algorithme de Dijkstra.\newline
     Avec l'algorithme de Dijkstra, on parcourt le graphe en largeur selon le poids de ses arcs.
-    Avec A*, on ajoute une heuristique aux poids des arcs.\newline
+    Avec A*, on effectue la même opération, mais on ajoute une heuristique aux poids des arcs.\newline
     `Une heuristique est une méthode de calcul qui fournit rapidement une solution réalisable,
     pas nécessairement optimale ou exacte, pour un problème d'optimisation difficile.`\newline
     %( REF WIKIPEDIA https://fr.wikipedia.org/wiki/Heuristique_(mathématiques) )
@@ -111,7 +125,7 @@
     (et avec une heuristique bien conçu au problème, on s'assure tout de même une solution proche de l'optimal)\newline\newline
     
     Remarquons également qu'en utilisant une heuristique nulle (qui renvoie toujours '0'), on obtient très exactement l'algorithme de Dijkstra.
-    C'est d'ailleurs comme celà que je l'ai re-implementé une fois l'algorithme A* implementé et optimisé.\newline
+    C'est d'ailleurs comme cela que je l'ai re-implementé Dijkstra, une fois l'algorithme A* implementé et optimisé.\newline
     (une version de l'algorithme de Dijkstra 'stand-alone' est toujours disponible dans le fichier 'dijstra.c.bkp')
   \newpage
   \section{Application: resolution labyrinthe}
